Update colour variables bs primary and link

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
  * License URI:       https://www.gnu.org/licenses/gpl-2.0.html
  */
 
- :root {
+:root {
     --gov-primary-blue: #234075;
     --gov-primary-yellow: #E3A82B;
     --gov-secondary-orange: #E87722;
@@ -22,24 +22,66 @@
     --gov-secondary-blue: #4698CB;
     --gov-secondary-brown: #866D48;
     --gov-secondary-purple: #5F2167;
-    --cover--height: calc(12 * var(--global--spacing-vertical));
-}
-img,
-iframe {
-    height: auto;
-    max-width: 100%;
-}
-.icon {
-    width: 2rem;
-    height: 100%;
-    margin: 0;
+    /* --cover--height: calc(12 * var(--global--spacing-vertical)); */
+    
+    /* Customized bootstrap root variables */
+    --bs-font-sans-serif: "BCSans", "Noto Sans", Verdana, Arial, sans-serif;
+    --bs-body-font-size: 1.25rem;
+    /* font-size base is now 20px instead of 16px/1rem */
+    
+    --bs-primary: var(--gov-primary-blue);
+    /* changed primary colours to gov-primary blue */
+    --bs-primary-rgb: 35, 64, 117;
+    
+    --bs-primary-text-emphasis: #0e1a2f;
+    /* text emphasis is 60% shade */
+    
+    --bs-primary-bg-subtle: #cfe2ff;
+    /* subtle bg is 80% tint */
+    
+    --bs-primary-border-subtle: #d3d9e3;
+    /* subtle border is 60% tint */
+    
+    --bs-link-color: #234075;
+    --bs-link-color-rgb: 35, 64, 117;
+    --bs-link-decoration: underline;
+    
+    --bs-link-hover-color: #1c335e;
+    /* link hover is 20% shade */
+    --bs-link-hover-color-rgb: 28, 51, 94;
 }
 
-.icon-square {
-    width: 2.75rem;
-    height: 3rem;
+@font-face {
+    src: url(/fonts/bc-sans/BCSans-Regular.woff?0079ea8e42d4e81a13d2b04d4e3a95a3) format("woff");
+    font-weight: 400;
+    font-style: normal;
+    font-family: "BCSans";
 }
 
+@font-face {
+    src: url(/fonts/bc-sans/BCSans-BoldItalic.woff?73ed5137b2c4a42b754f9463bfef3c8c) format("woff");
+    font-weight: 700;
+    font-style: italic;
+    font-family: "BCSans";
+}
+
+@font-face {
+    src: url(/fonts/bc-sans/BCSans-Italic.woff?9c3be03a06d30a6ecff0405eabbc92a1) format("woff");
+    font-weight: 400;
+    font-style: italic;
+    font-family: "BCSans";
+}
+
+@font-face {
+    src: url(/fonts/bc-sans/BCSans-Bold.woff?252ecf87ea37c93b293c23b9e2f052aa) format("woff");
+    font-weight: 700;
+    font-style: normal;
+    font-family: "BCSans";
+}
+
+
+
+/* Custom colours */
 .bg-gov-blue {
     background-color: var(--gov-primary-blue);
     color: white;
@@ -54,14 +96,30 @@ iframe {
     color: var(--gov-secondary-green);
 }
 
-.topic-card {
-    background-color: #fcf6ea;
-    /* gov primary yellow 90% tint*/
+.gov-yellow {
+    color: var(--gov-primary-yellow);
 }
 
-a:hover .topic-card {
-    background-color: #f1d495;
-    /* gov primary yellow 50% tint*/
+.bg-gov-yellow {
+    background-color: var(--gov-primary-yellow);
+}
+
+/* Images and icons */
+img,
+iframe {
+    height: auto;
+    max-width: 100%;
+}
+
+.icon {
+    width: 2rem;
+    height: 100%;
+    margin: 0;
+}
+
+.icon-square {
+    width: 2.75rem;
+    height: 3rem;
 }
 
 .icon-svg {
@@ -81,10 +139,14 @@ a:hover .topic-card {
     margin-right: .25rem;
 }
 
-.gov-yellow {
-    color: var(--gov-primary-yellow);
+/* Cards */
+
+.topic-card {
+    background-color: #fcf6ea;
+    /* gov primary yellow 90% tint*/
 }
 
-.bg-gov-yellow {
-    background-color: var(--gov-primary-yellow);
+a:hover .topic-card {
+    background-color: #f1d495;
+    /* gov primary yellow 50% tint*/
 }
