start work on filter page, styling edits

--- a/style.css
+++ b/style.css
@@ -235,14 +235,16 @@ a:hover .topic-card {
     /* gov primary yellow 50% tint*/
     color: var(--bs-body-color);
     border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color)!important; 
+    
 }
 
 [data-bs-theme=dark] a:hover .topic-card {
     background-color: var(--gov-primary-blue);
-    /* gov primary yellow 90% tint*/
     color: var(--bs-body-color);
 }
-
+[data-bs-theme=dark] .topic-card a:hover, [data-bs-theme=dark] .topic-card a  {
+    color: var(--bs-body-color);
+}
 .screen-reader-text {
     border: 0;
     clip: rect(1px, 1px, 1px, 1px);
@@ -292,7 +294,7 @@ a:hover .topic-card {
 }
 
 h1.title {
-    font-size: 2.25em;
+    font-size: calc(2rem + 1.5vw);
 }
 
 h1,
