--- a/style.css
+++ b/style.css
@@ -361,3 +361,7 @@ h5 {
 [data-bs-theme=light] .form-check-input {
     border-color: var(--bs-secondary-color);
 }
+
+a[rel=tag] {
+    text-decoration: none;
+}
