--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ iframe {
 .icon-svg svg {
     height: 1em;
     width: 1em;
-    margin-right: .25rem;
+    margin-right: 0.5rem;
 }
 
 .green-flag {
@@ -296,7 +296,7 @@ a:hover .topic-card {
 }
 
 h1.title {
-    font-size: calc(2rem + 1.5vw);
+    font-size: calc(1.75rem + 1.5vw);
     font-weight: 400;
 }
 
