--- a/style.css
+++ b/style.css
@@ -3,14 +3,12 @@
  * Theme URI:         https://learningcentre.gwww.gov.bc.ca/learninghub/
  * Description:       A simple classic custom theme for LearningHUB. 
  * Version:           1.0.0
- * Author:            Allan Haggett
+ * Author:            Nori Sinclair (primarily) & Allan Haggett
  * Author URI:        https://learningcentre.gwww.gov.bc.ca/
- * Text Domain:       learninghubg
+ * Text Domain:       learninghub
  * Tested up to:      6.4
  * Requires at least: 6.2
- * Requires PHP:      7.4
- * License:           GNU General Public License v2.0 or later
- * License URI:       https://www.gnu.org/licenses/gpl-2.0.html
+ * License:           Apache
  */
 
 :root {
