--- a/style.css
+++ b/style.css
@@ -220,7 +220,9 @@ iframe {
 
 a:hover .topic-card {
     background-color: #f1d495;
+    color: var(--bs-primary)
     /* gov primary yellow 50% tint*/
+    /* leave text colour unchanged on hover */
 }
 
 [data-bs-theme=dark] .topic-card {
