--- a/style.css
+++ b/style.css
@@ -110,15 +110,17 @@
     background-color: var(--gov-primary-yellow) !important;
 }
 
-.accordion-button.text-bg-primary::after {
+/* Preserve blue backgrounds for accordion headers rather than doing yellow */
+[data-bs-theme=dark] .accordion .text-bg-primary {
+    background-color: var(--gov-primary-blue) !important;
+    color: #fff !important;
+}
+
+.accordion-button.text-bg-primary::after, [data-bs-theme=dark] .accordion-button.text-bg-primary::after {
     --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
     --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
-[data-bs-theme=dark] .accordion-button.text-bg-primary::after {
-    --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='black'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='black'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-}
 
 [data-bs-theme=dark] .text-bg-primary {
     color: var(--bs-gray-900) !important;
@@ -221,8 +223,8 @@ iframe {
 a:hover .topic-card {
     background-color: #f1d495;
     color: var(--bs-primary)
-    /* gov primary yellow 50% tint*/
-    /* leave text colour unchanged on hover */
+        /* gov primary yellow 50% tint*/
+        /* leave text colour unchanged on hover */
 }
 
 [data-bs-theme=dark] .topic-card {
@@ -371,7 +373,7 @@ a[rel=tag] {
 }
 
 /* hack summary details so that it works on Safari */
- summary::-webkit-details-marker {
+summary::-webkit-details-marker {
     display: none;
 }
 
@@ -388,10 +390,9 @@ summary {
         top: 0.3em;
         left: -1rem;
     }
-} 
+}
 
 details[open]>summary::before {
     transform: rotate(90deg);
     left: -1.1rem;
 }
-
