--- a/style.css
+++ b/style.css
@@ -119,14 +119,20 @@
     background-color: var(--gov-primary-yellow) !important;
 }
 
-/* Preserve blue backgrounds for accordion headers rather than doing yellow */
+/* Preserve dark backgrounds for accordion headers rather than doing yellow */
 [data-bs-theme=dark] .accordion .text-bg-primary {
     background-color: var(--gov-primary-blue) !important;
     color: #fff !important;
 }
 
+[data-bs-theme=dark] .accordion .bg-gov-green {
+    background-color: var(--gov-secondary-green) !important;
+    color: #fff !important;
+}
+
 .accordion-button.text-bg-primary::after,
-[data-bs-theme=dark] .accordion-button.text-bg-primary::after {
+.accordion-button.bg-gov-green::after,
+[data-bs-theme=dark] .accordion-button.bg-gov-green::after {
     --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
     --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
