--- a/style.css
+++ b/style.css
@@ -435,11 +435,7 @@ details[open]>summary:not(.unstyled):before {
     left: -1.1rem;
 }
 
-/* single course listing version for stretched link */
-summary.unstyled {
-    list-style: none;
-    position: relative;
-}
+/* single course listing version with stretched link */
 
 span.summary {
     list-style: none;
@@ -457,7 +453,7 @@ span.summary {
     }
 }
 
-details[open] span.summary::before {
+a[aria-expanded="true"] span.summary::before {
     transform: rotate(90deg);
     left: -1.1rem;
 }
