--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@
     background-color: var(--gov-primary-yellow) !important;
 }
 
-/* Preserve dark backgrounds for accordion headers rather than doing yellow */
+/* Preserve dark backgrounds for accordion and tab headers rather than doing yellow */
 [data-bs-theme=dark] .accordion .text-bg-primary {
     background-color: var(--gov-primary-blue) !important;
     color: #fff !important;
@@ -520,4 +520,88 @@ p.circle-text {
         font-size: .75em !important;
         font-weight: normal !important;
     }
+}
+
+/* Styling for left-hand pill tab group with arrows */
+
+.nav-tabs,
+.nav-pills {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+.nav-tabs .nav-link {
+    color: var(--bs-light-bg-subtle);
+    font-weight: bold;
+    background-color: var(--bs-primary);
+    border-radius: .25rem .25rem 0 0;
+    border: none;
+    margin-right: .18rem;
+    padding: 0.68rem 1.18rem;
+    box-shadow: inset 0.18rem 0 0 0 var(--bs-primary), inset -0.18rem 0 0 0 var(--bs-primary), inset 0 0.18rem 0 0 var(--bs-primary), inset 0 -0.18rem 0 0 transparent;
+    --max-lines: 2.5;
+    position: relative;
+    max-height: calc(var(--lh) * var(--max-lines));
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.nav-tabs .nav-link.active {
+    background-color: var(--bs-light-bg-subtle);
+    color: var(--bs-primary);
+    margin-bottom: -2px;
+    padding-bottom: 0.82rem;
+    box-shadow: inset 0.18rem 0 0 0 var(--bs-primary), inset -0.18rem 0 0 0 var(--bs-primary), inset 0 0.18rem 0 0 var(--bs-primary), inset 0 -0.18rem 0 0 var(--bs-light-bg-subtle);
+}
+
+.nav-pills .nav-link {
+    background-color: var(--bs-light-bg-subtle);
+    color: var(--bs-primary);
+    font-weight: bold;
+    border-radius: .25rem;
+    border: solid var(--bs-primary) 2px;
+    position: relative;
+}
+
+.nav-pills .nav-link.active {
+    color: var(--bs-light-bg-subtle);
+    background-color: var(--bs-primary);
+}
+
+/* Add indicator arrow for the active tab */
+@media (min-width: 992px) {
+    .nav-pills .nav-link::before {
+        content: '';
+        display: block;
+        border-top: 8px solid transparent;
+        border-left: 10px solid var(--bs-primary);
+        border-bottom: 8px solid transparent;
+        position: absolute;
+        top: 50%;
+        right: -10px;
+        transform: translateY(-50%);
+        opacity: 0;
+    }
+}
+
+.nav-pills .nav-link.active::before {
+    opacity: 1;
+}
+
+#content .nav-pills li.nav-item+li.nav-item {
+    margin-top: .5rem;
+}
+
+.nav-pills.tab-content {
+    border-radius: 0.5rem;
+    padding: 1rem 1rem 0 1rem;
+    background-color: var(--bs-light-bg-subtle);
+    border: var(--bs-primary) 2px solid;
+    height: 100%;
+}
+
+#content li.nav-item+li.nav-item {
+    margin-top: 0;
 }
