--- a/style.css
+++ b/style.css
@@ -630,20 +630,23 @@ p.circle-text {
 
 ul.list-time {
     list-style: none;
-    padding-left: 0;
+    padding-left: 1.5em;
 }
 
 ul.list-time>li {
     position: relative;
-    padding-left: 1.5em;
     /* space to preserve indentation on wrap */
 }
 
 ul.list-time>li:before {
-    font-family: "Font Awesome 6 Free";
-    content: "\f017";
+    content: "";
     position: absolute;
-    left: 0;
-    font-weight: 900;
+    left: -1.5em;
+    top: 0.25em;;
+    width: 1rem;
+    height: 1rem;
+    background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path d='M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z'/><path d='M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0'/></svg>");
+    background-repeat: no-repeat;
+    background-size: 1rem 1rem;
     /* place the content at the start of the padding */
 }
